# chat-dir

./: .gitignore  LICENSE  README.md  pyproject.toml
src/chat_dir/: __init__.py  browser.py  cli.py  csv_output.py  errors.py  models.py  output.py
src/chat_dir/providers/: __init__.py  base.py  chatgpt.py
tests/: test_processing.py
